Fix #67: Correct overlapping profile image and display achievements section

--- a/index.css
+++ b/index.css
@@ -12,9 +12,6 @@
   font-family: 'Exo 2', sans-serif;
 
   background-color: #f5f5f5;
-  background-image: url(./imgproject/profile.png);
-  background-size: cover;
-  background-position: center center;
   height: 470px;
 }
 
@@ -60,7 +57,8 @@ html {
 }
 
 body {
-  display: none;
+  display: block;
+  opacity: 1;
   font-family: 'Exo 2', sans-serif;
   margin: 0;
   padding: 0;
@@ -312,7 +310,7 @@ footer {
 
 .achivements-container {
   width: 100%;
-  display: absolute;
+  display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-box-pack: center;
@@ -761,10 +759,10 @@ h3 {
   transition: opacity 1s ease-in-out;
 }
 
-.a1.show,
-.a3.show,
-.a2.show,
-.a4.show {
+.a1.animate,
+.a3.animate,
+.a2.animate,
+.a4.animate {
   opacity: 1;
 }
 
